enrolls counter
